restore old behavior for external references, fdo#64229

Change-Id: Iae160607447ff6e1133f9e1e6f9c6a9f1e7bd7ab