sc/source/core/tool/interpr1.cxx
@@ -5614,7 +5614,7 @@ double ScInterpreter::IterateParametersIf( ScIterFuncIf eFunc )
             case svExternalSingleRef:
             case svExternalDoubleRef:
                 {
-                    pQueryMatrix = PopMatrix();
+                    pQueryMatrix = GetMatrix();
                     if (!pQueryMatrix)
                     {
                         SetError( errIllegalParameter);
